--- a/.github/workflows/clone-repo.yml
+++ b/.github/workflows/clone-repo.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          repository: ${{ secrets.REPO_URL }}
