--- a/.github/workflows/novu.yml
+++ b/.github/workflows/novu.yml
@@ -17,21 +17,24 @@ jobs:
 
       - name: Trigger Novu event
         run: |
-          node -e "const { Novu } = require('@novu/node');
-                  const novu = new Novu(process.env.NOVU_API_KEY);
-                  await novu.trigger('<REPLACE_WITH_EVENT_NAME_FROM_ADMIN_PANEL>', {
-                    to: {
-                      subscriberId: '<USER_IDENTIFIER>',
-                      email: 'test@email.com',
-                      firstName: 'John',
-                      lastName: 'Doe',
-                    },
-                    payload: {
-                      organization: {
-                        logo: 'https://evilcorp.com/logo.png',
-                      },
-                    },
-                  });"
+          const { Novu } = require('@novu/node');
+          const novu = new Novu(process.env.NOVU_API_KEY);
+
+          (async () => {
+            await novu.trigger('<REPLACE_WITH_EVENT_NAME_FROM_ADMIN_PANEL>', {
+              to: {
+                subscriberId: '<USER_IDENTIFIER>',
+                email: 'test@email.com',
+                firstName: 'John',
+                lastName: 'Doe',
+              },
+              payload: {
+                organization: {
+                  logo: 'https://evilcorp.com/logo.png',
+                },
+              },
+            });
+          })()
         env:
           NOVU_API_KEY: ${{ secrets.NOVU_API_KEY }}
 
@@ -46,20 +49,23 @@ jobs:
 
       - name: Trigger Novu event
         run: |
-          node -e "const { Novu } = require('@novu/node');
-                  const novu = new Novu(process.env.NOVU_API_KEY);
-                  await novu.trigger('<REPLACE_WITH_EVENT_NAME_FROM_ADMIN_PANEL>', {
-                    to: {
-                      subscriberId: '<USER_IDENTIFIER>',
-                      email: 'test@email.com',
-                      firstName: 'John',
-                      lastName: 'Doe',
-                    },
-                    payload: {
-                      organization: {
-                        logo: 'https://evilcorp.com/logo.png',
-                      },
-                    },
-                  });"
+          const { Novu } = require('@novu/node');
+          const novu = new Novu(process.env.NOVU_API_KEY);
+
+          (async () => {
+            await novu.trigger('<REPLACE_WITH_EVENT_NAME_FROM_ADMIN_PANEL>', {
+              to: {
+                subscriberId: '<USER_IDENTIFIER>',
+                email: 'test@email.com',
+                firstName: 'John',
+                lastName: 'Doe',
+              },
+              payload: {
+                organization: {
+                  logo: 'https://evilcorp.com/logo.png',
+                },
+              },
+            });
+          })()
         env:
           NOVU_API_KEY: ${{ secrets.NOVU_API_KEY }}
